corrected styling for aligning navbar right

--- a/public/style.css
+++ b/public/style.css
@@ -115,7 +115,7 @@ html, body {
   .containerNav {
     position: relative;
     width: 400px;
-    left: 65%;
+    margin-left: auto;
     margin-right: 5;
 
   }
